# likana

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  Makefile  Makefile.in  README.md  annotated.js  classes.html  configure  configure.ac  files.html  files.js  functions_vars.html  likana.c  structTHREAD__ARG.html
docs/: annotated.html  functions.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  likana_8c.html  likana_8c.js  navtree.js  navtreeindex.js  structTHREAD__ARG.js
docs/search/: all_70.js  all_73.js  all_76.js  classes_74.js  defines_64.js  defines_68.js  defines_69.js  defines_72.js  defines_76.js  files_6c.js  functions_6d.js  functions_74.js  functions_75.js  functions_76.js  search.js  variables_63.js  variables_69.js
etc/default/: likana
etc/init.d/: likana
etc/udev/rules.d/: 50-likana.rules
lib/systemd/system/: likana.service
lib/udev/rules.d/: 60-likana.rules
man/man1/: THREAD_ARG.1  likana.c.1
man/man3/: THREAD_ARG.3  likana.c.3
search/: all_63.js  all_64.js  all_69.js  all_74.js  all_77.js  functions_63.js  variables_64.js
src/: Makefile.am  Makefile.bak  Makefile.in  likana.c  likana_test.c
